syntax = "proto3";
package shentu.cert.v1alpha1;

import "gogoproto/gogo.proto";
import "shentu/cert/v1alpha1/cert.proto";

option go_package = "github.com/certikfoundation/shentu/x/cert/types";

message GenesisState {
    option (gogoproto.equal) = false;
    option (gogoproto.goproto_getters) = false;
    
    repeated Certifier certifiers = 1 [ (gogoproto.moretags) = "yaml:\"certifiers\"", (gogoproto.nullable) = false ];
    repeated Validator validators = 2 [ (gogoproto.moretags) = "yaml:\"validators\"", (gogoproto.nullable) = false ];
}